# hw3-bzacharia999

./: .gitignore  CNAME  Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
ligotools/: pyproject.toml  utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
