[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "mytoy"
authors = [
  { name="Ligo Scientific Collaboration (LSC) and Benjamin Sabu Zacharia", email="bsabuzacharia@berkeley.edu" },
]
description = "The ligo package for the open project"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "python=3.9",
    "numpy=2.0",
    "scipy=1.13",
    "h5py=3.12",
    "matplotlib=3.9",
    "scipy=1.13",
    "ipykernel=6.29"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "Ligo"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-bzacharia999"
Issues = "https://github.com/UCB-stat-159-f25/hw3-bzacharia999/issues"

[tool.setuptools]
packages = ["readligo"]

[tool.setuptools.dynamic]
version = {attr = "readligo.__version__"}